# Lima-camera-dhyana

./: .gitignore  CMakeLists.txt  pom_64_Win7_shared.xml  pom_64_win_shared.xml
doc/: index.rst
include/: DhyanaCamera.h  DhyanaTimer.h
sdk/: .gitignore
sdk/msvc/include/: TUCamApi.h  TUCamApi.pas  TUDefine.h  TUDefine.pas
sdk/msvc/lib/x64/: TUCam.lib
sdk/msvc/lib/x86/: TUCam.lib
src/: DhyanaCamera.cpp  DhyanaInterface.cpp  DhyanaTimer.cpp
test/: main.cpp
